unreleased
==================

- Add a config option for ``preprocessor_wants_settings``. If set to ``true``,
  the ``preprocessor`` will be wrapped in a function that invokes the 
  preprocessor with pyramid's config settings as the second argument.

1.0.2 (2014-04-22)
==================

- Fix mako.imports so that aslist() does not flatten. See issue #23
  (https://github.com/Pylons/pyramid_mako/issues/23)
  
1.0.1 (2014-04-16)
==================

- Bump the required version of Mako to 0.8 or newer for issue #22 (add
  future_imports). If you would like to use an older version of Mako, please
  pin your dependency to version 0.3.1 of pyramid_mako.

1.0 (2014-04-15)
================

- Add new configuration variable for future_imports. See issue #22
  (https://github.com/Pylons/pyramid_mako/issues/22)
- Fix issue #19, whereby pyramid.reload_templates stopped functioning due to
  changes in pyramid_mako. The lookup is now completed at template render,
  instead of when the factory returns the renderer. See:
  (https://github.com/Pylons/pyramid_mako/issues/19)
- Tuple return values in the form of ('defname', {}) are no longer supported,
  and will result in a ValueError being raised.
- Fix an packaging issue whereby \*.foo files were not included in the MANIFEST.
- Caller-relative template lookup is now supported. Any template that fails
  to be found in the default search paths will be searched relative to the
  caller package.
- Allow overriding the ``pyramid.reload_templates`` using
  ``mako.reload_templates``.
- Change the way that custom user values passed to the renderer are merged with
  the system provided variables. This allows the user to pass in a variable
  named 'context' and have it correctly override the system provided context,
  and THEN get correctly renamed so that Mako doesn't complain about a variable
  being passed in that isn't allowed due to it being reserved.
- Drop testing dependency on ``nose-selecttests``.

0.3.1 (2013-10-22)