@@ -182,7 +182,6 @@ def parse_options_from_settings(settings, settings_prefix, maybe_dotted):
     if reload_templates is None:
         reload_templates = settings.get('pyramid.reload_templates', None)
     reload_templates = asbool(reload_templates)
-    directories = sget('directories', [])
     module_directory = sget('module_directory', None)
     input_encoding = sget('input_encoding', 'utf-8')
     error_handler = sget('error_handler', None)
@@ -192,11 +191,18 @@ def parse_options_from_settings(settings, settings_prefix, maybe_dotted):
     strict_undefined = asbool(sget('strict_undefined', False))
     preprocessor = sget('preprocessor', None)
     preprocessor_wants_settings = asbool(sget('preprocessor_wants_settings', None))
+
+    directories = sget('directories', [])
     if not is_nonstr_iter(directories):
         # Since we parse a value that comes from an .ini config,
         # we treat whitespaces and newline characters equally as list item separators.
         directories = aslist(directories, flatten=True)
     directories = [abspath_from_asset_spec(d) for d in directories]
+
+    # handle similar to `directories`, but don't decode the asset specs yet
+    precompile = sget('precompile', [])
+    if not is_nonstr_iter(precompile):
+        precompile = aslist(precompile, flatten=True)
 
     if module_directory is not None:
         module_directory = abspath_from_asset_spec(module_directory)
@@ -236,7 +242,29 @@ def parse_options_from_settings(settings, settings_prefix, maybe_dotted):
         filesystem_checks=reload_templates,
         strict_undefined=strict_undefined,
         preprocessor=preprocessor,
+        precompile=precompile,
     )
+
+
+def recursive_precompile(lookup, extension, asset_spec):
+    """recursively precompile the `directory` within the `asset_spec`
+     for files matching the `extension` using the defined `lookup` (an instance
+     of `PkgResourceTemplateLookup`).
+    """
+    filepath = abspath_from_asset_spec(asset_spec)
+    if not os.path.isdir(filepath):
+        t = lookup.get_template(asset_spec)
+        return
+    _len_extension = len(extension)
+    _contents = [f for f in os.listdir(filepath) if f not in ('.', '..')]
+    for _file in _contents:
+        _filepath = os.path.join(filepath, _file)
+        _asset_spec = os.path.join(asset_spec, _file)
+        if os.path.isdir(_filepath):
+            recursive_precompile(lookup, extension, _asset_spec)
+        else:
+            if _file[-_len_extension:] == extension:
+                t = lookup.get_template(_asset_spec)
 
 def add_mako_renderer(config, extension, settings_prefix='mako.'):
     """ Register a Mako renderer for a template extension.
@@ -258,10 +286,16 @@ def add_mako_renderer(config, extension, settings_prefix='mako.'):
         registry = config.registry
         opts = parse_options_from_settings(
             registry.settings, settings_prefix, config.maybe_dotted)
+        precompile = opts.pop('precompile')
         lookup = PkgResourceTemplateLookup(**opts)
-
         renderer_factory.lookup = lookup
-
+        if precompile:
+            for asset_spec in precompile:
+                filepath = abspath_from_asset_spec(asset_spec)
+                if os.path.isdir(filepath):
+                    recursive_precompile(lookup, extension, asset_spec)
+                else:
+                    t = lookup.get_template(asset_spec)
     config.action(('mako-renderer', extension), register)
 
 def includeme(config):
